# itk4opencl

./: CMakeLists.txt  FixLog.txt  Readme.txt  license.txt
common/: CMakeLists.txt  itkGenericMultiResolutionPyramidImageFilter.hxx
common/gpu/: itkGPUBSplineDecompositionImageFilter.hxx  itkGPUShrinkImageFilter.hxx
itkgpu/: CMakeLists.txt  itkGPUDataManager.cxx  itkGPUDataManager.h  itkGPUImageDataManager.h  itkGPUUnaryFunctorImageFilter.hxx  itkOpenCLContext.cxx  itkOpenCLKernelManager.cxx  itkOpenCLLogger.cxx  itkOpenCLLogger.h
itkgpu/test/: CMakeLists.txt  itkTestHelper.h
test/: CMakeLists.txt  itkGPUBSplineDecompositionImageFilterTest.cxx  itkGPUBSplineTransformTest.cxx  itkGPUCastImageFilterTest.cxx  itkGPUGenericMultiResolutionPyramidImageFilterTest.cxx  itkGPURecursiveGaussianImageFilterTest.cxx  itkGPUResampleImageFilterTest.cxx  itkGPUShrinkImageFilterTest.cxx  itkGPUSmoothingRecursiveGaussianImageFilterTest.cxx  itkTestHelper.h
test_logs/: CPUGPULog-01-26-17-GPU-GeForce-GTX-980-Ti.out  CPUGPULog-01-26-17-GPU-GeForce-GTX-980-Ti.txt  CPUGPULog-04-06-16-GPU-GeForce-GTX-980-Ti.out  CPUGPULog-04-06-16-GPU-GeForce-GTX-980-Ti.txt  CPUGPULog-06-06-16-GPU-GeForce-GTX-980-Ti.out  CPUGPULog-06-06-16-GPU-GeForce-GTX-980-Ti.txt  CPUGPULog-08-19-13-GPU-GeForce-GTX-480.out  CPUGPULog-08-19-13-GPU-GeForce-GTX-480.txt  CPUGPULog-10-06-16-GPU-GeForce-GTX-980-Ti.out  CPUGPULog-10-06-16-GPU-GeForce-GTX-980-Ti.txt  CPUGPULog-10-25-17-CPU-Intel(R)-Xeon(R)-CPU-E5-1620-v3-@-3.50GHz.out  CPUGPULog-10-25-17-CPU-Intel(R)-Xeon(R)-CPU-E5-1620-v3-@-3.50GHz.txt  CPUGPULog-10-25-17-GPU-GeForce-GTX-980-Ti.out  CPUGPULog-10-25-17-GPU-GeForce-GTX-980-Ti.txt  CPUGPULog-10-30-13-CPU-Intel(R)-Xeon(R)-CPU-W3520-@-2.67GHz.out  CPUGPULog-10-30-13-CPU-Intel(R)-Xeon(R)-CPU-W3520-@-2.67GHz.txt  CPUGPULog-11-13-13-GPU-GeForce-GTX-260.out  CPUGPULog-11-13-13-GPU-GeForce-GTX-260.txt  CPUGPULog-11-13-13-GPU-GeForce-GTX-780.out  CPUGPULog-11-13-13-GPU-GeForce-GTX-780.txt  CPUGPULog-12-09-16-GPU-GeForce-GTX-980-Ti.out  CPUGPULog-12-09-16-GPU-GeForce-GTX-980-Ti.txt  Workstation-System-06-06-2016.txt
